# FierlLab

./: .gitignore  CLAUDE.md  README.md
api/: nixpacks.toml  pyproject.toml  requirements.txt
api/app/: auth.py  config.py  db.py  main.py  startup.py
api/app/models/: __init__.py  pbh.py  profiel.py  schans.py  sprong_invoer.py  user.py  wedstrijd.py  wind_cache.py
api/app/routes/: pbholland.py  profiel.py  schansen.py  wedstrijden.py  wind.py
api/app/schemas/: profiel.py  schans.py  wedstrijd.py
api/app/seeds/: schansen.py
api/app/services/: knmi.py  pbholland.py  wind.py
app/: .env.local.example  package-lock.json  package.json  vercel.json
app/src/: middleware.ts
app/src/app/: globals.css  layout.tsx  manifest.ts  page.tsx
app/src/app/_components/: nav.tsx  swipe-nav.tsx  wedstrijd-detail.tsx  wind-poging.tsx
app/src/app/api/_lib/: backend.ts
app/src/app/api/pbholland/aankomend/: route.ts
app/src/app/api/pbholland/preview/: route.ts
app/src/app/api/pbholland/sprongen/: route.ts
app/src/app/api/pbholland/statistieken/: route.ts
app/src/app/api/pbholland/wedstrijden/: route.ts
app/src/app/api/pbholland/wind-nu/: route.ts
app/src/app/api/profiel/: route.ts
app/src/app/api/schansen/: route.ts
app/src/app/api/wedstrijden/: route.ts
app/src/app/api/wind/: route.ts
app/src/app/instellingen/: page.tsx
app/src/app/login/: page.tsx
app/src/app/register/: page.tsx
app/src/app/statistieken/: page.tsx
app/src/app/wedstrijden/: page.tsx
app/src/app/wedstrijden/[id]/: page.tsx
app/src/lib/: api.ts  date.ts  fysica.ts  grafiek.ts
(+8 files in other folders)
