[project]
name = "fierllab-api"
version = "0.1.0"
description = "Backend API voor FierlLab"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "uvicorn>=0.30,<1.0",
    "psycopg2-binary>=2.9,<3.0",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
